--- a/Casos_Uso/CU03.html
+++ b/Casos_Uso/CU03.html
@@ -52,7 +52,14 @@
     <td>
       <ul>
         <li>El usuario podrá acceder al perfil del usuario clicando en el</li>
-        <li>Le mostrará toda la información de ese perfil (productos, estadisitcas, informacion personal...)</li>
+        <li>
+          Le mostrará toda la información de ese perfil:
+          <ol>
+            <li>Información personal pública (nombre, apellidos, dirección, descripción</li>
+            <li>Podrá ver los productos que tiene en venta ese usuario</li>
+            <li>Podrá ver las opiniones que tiene, además mostrará sí nosotros podemos hacerle una (siempre y cuando sea sobre un producto que hemos comprado)</li>
+          </ol>
+        </li>
       </ul>
     </td>
   </tr>
