--- a/Casos_Uso/CU05.html
+++ b/Casos_Uso/CU05.html
@@ -53,8 +53,18 @@
     <th>Postcondiciones</th>
     <td>
       <ul>
-        <li>Dentro de esta pantalla podemos modificar o agregar información</li>
-        <li>En esta pantalla podremos ver nuestros productos, los que hemos comprado, los que tenemos en favoritos...</li>
+
+        <li>
+          Dentro de esta pantalla podemos modificar, agregar o eliminar la siguiente información de nuestro perfil:
+          <ul>
+            <li>Nombre y Apellidos</li>
+            <li>Foto del icono de nuestro perfil</li>
+            <li>Correo electrónico</li>
+            <li>Descripción</li>
+            <li>Dirección</li>
+          </ul>
+        </li>
+
       </ul>
     </td>
   </tr>
@@ -62,7 +72,7 @@
     <th>Secuencia alternativa</th>
     <td>
       <ul>
-        <li>El usuario no haya podido guardar los cambios porque ha querido modificar el correo o el usuario y ya estaba en uso</li>
+        <li>El usuario no haya podido guardar los cambios porque ha querido modificar el correo</li>
       </ul>
     </td>
   </tr>
