--- a/Casos_Uso/CU12.html
+++ b/Casos_Uso/CU12.html
@@ -18,7 +18,7 @@
   </tr>
   <tr>
     <th>Nombre</th>
-    <td>Añadir a favoritos los productos</td>
+    <td>Vender un producto</td>
   </tr>
   <tr>
     <th>Actores</th>
@@ -26,13 +26,14 @@
   </tr>
   <tr>
     <th>Descripción</th>
-    <td>Podemos agregar los productos de nuestro interés a favoritos y estos poder verlos desde nuestro perfil para su facilidad.</td>
+    <td>Los usuarios podrán vender los productos que tiene en la aplicación.</td>
   </tr>
   <tr>
     <th>Precondiciones</th>
     <td>
       <ul>
-        <li>El producto que queremos agregar no le tengamos ya agregado, porque si le damos de nuevo se cancelará el tenerlo en favoritos.</li>
+        <li>Que tengamos un producto subido a la aplicación.</li>
+        <li>Que el artículo que se quiera comprar sea nuestro.</li>
       </ul>
     </td>
   </tr>
@@ -40,8 +41,9 @@
     <th>Secuencia normal</th>
     <td>
       <ol>
-        <li>Buscamos un producto que tengamos interés en él.</li>
-        <li>Le damos al corazón que hay para agregarle a favoritos</li>
+        <li>Un usuario selecciona un producto nuestro que le sea de interés.</li>
+        <li>Ese usuario que quiere comprar un producto nuestro, le de al botón de comprar.</li>
+        <li>El vendedor debe aceptar o rechazar la compra, dependiendo de si es rentable (por motivos de desplazamiento u otros)</li>
       </ol>
     </td>
   </tr>
@@ -49,7 +51,7 @@
     <th>Postcondiciones</th>
     <td>
       <ul>
-        <li>El producto ha sido agregado a favoritos y podremos verlo en nuestro perfil.</li>
+        <li>El producto será y aparecerá como vendido en la aplicación.</li>
       </ul>
     </td>
   </tr>
@@ -57,7 +59,7 @@
     <th>Secuencia alternativa</th>
     <td>
       <ul>
-        <li>No lo hemos podido agregar porque ya lo teníamos agregado anteriormente.</li>
+        <li>Que no se le pueda vender a un usuario en concreto porque ese producto justo ha sido reservado para otra persona.</li>
       </ul>
     </td>
   </tr>
