--- a/Casos_Uso/index.html
+++ b/Casos_Uso/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="CSS/index.css">
     <title>Lista de Casos de Uso</title>
 </head>
 <style>
@@ -40,37 +39,37 @@
     <a href="CU05.html">
         <div><p>CU5</p></div>
     </a>
-    <a href="CU06.html">
+    <a href="CU07.html">
         <div><p>CU6</p></div>
     </a>
-    <a href="CU07.html">
+    <a href="CU09.html">
         <div><p>CU7</p></div>
     </a>
-    <a href="CU08.html">
+    <a href="CU10.html">
         <div><p>CU8</p></div>
     </a>
-    <a href="CU09.html">
+    <a href="CU11.html">
         <div><p>CU9</p></div>
     </a>
-    <a href="CU10.html">
+    <a href="CU12.html">
         <div><p>CU10</p></div>
     </a>
-    <a href="CU11.html">
+    <a href="CU13.html">
         <div><p>CU11</p></div>
     </a>
-    <a href="CU12.html">
+    <a href="CU14.html">
         <div><p>CU12</p></div>
     </a>
-    <a href="CU13.html">
+    <a href="ModificarUsuario.html">
         <div><p>CU13</p></div>
     </a>
-    <a href="CU14.html">
+    <a href="VetarUsuarios.html">
         <div><p>CU14</p></div>
     </a>
-    <a href="CU15.html">
+    <a href="BorrarUsuario.html">
         <div><p>CU15</p></div>
     </a>
-    <a href="CU16.html">
+    <a href="BorrarProducto.html">
         <div><p>CU16</p></div>
     </a>
 </section>
