--- a/Casos_Uso/CU09.html
+++ b/Casos_Uso/CU09.html
@@ -14,11 +14,11 @@
 <table>
   <tr>
     <th>Id</th>
-    <td>CU9</td>
+    <td>CU09</td>
   </tr>
   <tr>
     <th>Nombre</th>
-    <td>Comprar producto</td>
+    <td>Listar productos</td>
   </tr>
   <tr>
     <th>Actores</th>
@@ -26,13 +26,13 @@
   </tr>
   <tr>
     <th>Descripción</th>
-    <td>Tendremos la opción de comprar un producto que se encuentre dentro de la app</td>
+    <td>Podremos filtrar los productos que queramos en la aplicación, aparte de buscar algún producto específico que queramos</td>
   </tr>
   <tr>
     <th>Precondiciones</th>
     <td>
       <ul>
-        <li>Que ese producto no este "reservado" para un usuario y que este libre</li>
+        <li>Debemos de tener iniciada la sesión en la aplicación</li>
       </ul>
     </td>
   </tr>
@@ -40,10 +40,16 @@
     <th>Secuencia normal</th>
     <td>
       <ol>
-        <li>Buscamos el producto que queremos</li>
-        <li>Contactamos con el dueño de ese artículo si fuese necesario para concretar un precio y método de transporte del mismo</li>
-        <li>Dar al botón de comprar artículo</li>
-        <li>Esperar que el dueño acepte la compra nuestra</li>
+        <li>Iremos a la pantalla inicial de la aplicación, que es la lista de los productos de la aplicación.</li>
+        <li>
+          Filtraremos y buscaremos los productos que queramos. Podemos filtrar:
+          <ul>
+            <li>Por precio</li>
+            <li>Por una categoría o subcategoría</li>
+            <li>Por algo específico que introduzca el usuario</li>
+            <li>Además, se podrá ordenar esos productos por precio (más caro o barato) y por la fecha de subida (antígüos o más nuevos)</li>
+          </ul>
+        </li>
       </ol>
     </td>
   </tr>
@@ -51,8 +57,8 @@
     <th>Postcondiciones</th>
     <td>
       <ul>
-        <li>El producto será guardado como una compra de ese usuario</li>
-        <li>Se añadirá en el apartado de compras de nuestro perfil</li>
+        <li>Nos mostrará la lista con todos los productos cuya condición que se ha impuesto en los filtros sea verdad</li>
+        <li>Podemos seleccionar el producto que queramos y nos mostrara toda la información, con su vendedor y la opción de agregarlo a favoritos o de contactar con el vendedor</li>
       </ul>
     </td>
   </tr>
@@ -60,7 +66,7 @@
     <th>Secuencia alternativa</th>
     <td>
       <ul>
-        <li>Que no lo podamos comprar porque el producto esté reservado.</li>
+        <li>Que no muestre ningún producto, ya que no hay productos con esas características que hemos filtrado</li>
       </ul>
     </td>
   </tr>
