--- a/Casos_Uso/CU14.html
+++ b/Casos_Uso/CU14.html
@@ -18,21 +18,21 @@
   </tr>
   <tr>
     <th>Nombre</th>
-    <td>Vetar usuarios</td>
+    <td>Añadir a favoritos los productos</td>
   </tr>
   <tr>
     <th>Actores</th>
-    <td>Administradores</td>
+    <td>Usuarios</td>
   </tr>
   <tr>
     <th>Descripción</th>
-    <td>Los administradores podrán vetar a los usuarios que no tengan un comportamiento normal en la aplicación</td>
+    <td>Podemos agregar los productos de nuestro interés a favoritos y estos poder verlos desde nuestro perfil para su facilidad.</td>
   </tr>
   <tr>
     <th>Precondiciones</th>
     <td>
       <ul>
-        <li>El usuario que queramos vetar no exista o ya este vetado.</li>
+        <li>El producto que queremos agregar no le tengamos ya agregado, porque si le damos de nuevo se cancelará el tenerlo en favoritos.</li>
       </ul>
     </td>
   </tr>
@@ -40,9 +40,8 @@
     <th>Secuencia normal</th>
     <td>
       <ol>
-        <li>Buscamos al usuario que queramos vetar.</li>
-        <li>Entramos en su perfil y le damos al botón de "vetar"</li>
-        <li>Confirmaremos la acción.</li>
+        <li>Buscamos un producto que tengamos interés en él.</li>
+        <li>Le damos al corazón que hay para agregarle a favoritos</li>
       </ol>
     </td>
   </tr>
@@ -50,8 +49,7 @@
     <th>Postcondiciones</th>
     <td>
       <ul>
-        <li>El usuario ha sido vetado de la aplicación</li>
-        <li>Cuando quiera entrar ese usuario le saldrá un mensaje de que su cuenta ha sido suspendida temporalmente</li>
+        <li>El producto ha sido agregado a favoritos y podremos verlo en nuestro perfil.</li>
       </ul>
     </td>
   </tr>
@@ -59,7 +57,7 @@
     <th>Secuencia alternativa</th>
     <td>
       <ul>
-        <li>No hayamos podido vetar al usuario por temas de permisos o de que ya estaba vetado anteriormente.</li>
+        <li>No lo hemos podido agregar porque ya lo teníamos agregado anteriormente.</li>
       </ul>
     </td>
   </tr>
