--- a/Casos_Uso/ModificarUsuario.html
+++ b/Casos_Uso/ModificarUsuario.html
@@ -14,25 +14,25 @@
 <table>
   <tr>
     <th>Id</th>
-    <td>CU4</td>
+    <td>CU13</td>
   </tr>
   <tr>
     <th>Nombre</th>
-    <td>Ver estadísticas</td>
+    <td>Modificación del usuario</td>
   </tr>
   <tr>
     <th>Actores</th>
-    <td>Usuarios</td>
+    <td>Administradores</td>
   </tr>
   <tr>
     <th>Descripción</th>
-    <td>Se podrán ver las estadísticas en la aplicación. (Tipo de articulos más vendido, los mejores valorado de la app, quien es el que más ha vendido / comprado...)</td>
+    <td>Los administradores podrán convertir a un usuario de la app en administrador, pero debemos de tener cuidado porque es irreversible</td>
   </tr>
   <tr>
     <th>Precondiciones</th>
     <td>
       <ul>
-        <li>El usuario debe de estar logueado en la app</li>
+        <li>Que el usuario que se quiera modificar no sea administrador, porque no nos dejará</li>
       </ul>
     </td>
   </tr>
@@ -40,8 +40,9 @@
     <th>Secuencia normal</th>
     <td>
       <ol>
-        <li>El usuario clicará en el link "Estadísticas" del menú de arriba</li>
-        <li>Accederá a una página de las estadísticas</li>
+        <li>Ir al menu de "Usuarios" y buscar al usuario que queramos.</li>
+        <li>Seleccionar ese usuario y darle al botón de "Cambiar a Administrador".</li>
+        <li>Aceptar los cambios.</li>
       </ol>
     </td>
   </tr>
@@ -49,13 +50,7 @@
     <th>Postcondiciones</th>
     <td>
       <ul>
-        <li>
-          Una vez en la página de estadísticas, podrá ver:
-          <ol>
-            <li>Una gráfica con los usuarios con más productos vendidos y comprados.</li>
-            <li>Otra gráfica con estadísticas personales como el número de ventas, de compras, de opiniones, de mensajes enviados...</li>
-          </ol>
-        </li>
+        <li>El usuario a partir de ahora será administrador.</li>
       </ul>
     </td>
   </tr>
@@ -63,7 +58,7 @@
     <th>Secuencia alternativa</th>
     <td>
       <ul>
-        <li>Que no haya podido acceder a ese menú por un fallo en el servidor</li>
+        <li>No se ha podido modificar su rol porque el usuario que lo ha hecho o no tiene permisos o ese usuario que queremos que sea modificado ya es administrador.</li>
       </ul>
     </td>
   </tr>
